syntax = "proto3";
package sub_payment;
option go_package = "/pb";
import "google/protobuf/timestamp.proto";

message Subscription{
    int64 id=1;
    string tier=2;
    float price_per_month=3;
}

message Payment{
    int64 id=1;
    int64 user_id=2;
    string payment_gateway=3;
    float amount=4;
    string currency=5;
    google.protobuf.Timestamp transaction_date =6; // can be null
    string status=7;
    string url=8;
}


message UserSubscription{
    int64 id=1;
    int64 user_id=2;
    Subscription subscription=3;
    int64 duration=4;
    google.protobuf.Timestamp end_date=5; // can be null
    Payment payment=6;
}


message CreateUserSubcriptionReq{
    int64 user_id=1;
    string tier=2;
    int64 duration=3;
}

message CreateUserSubcriptionResp{
    int64 id=1;
    int64 user_id=2;
    Subscription subscription=3;
    int64 duration=4;
    google.protobuf.Timestamp end_date=5;
    Payment payment=6;
}

message GetUserSubcriptionsReq{
    int64 user_id=1;
}

message GetUserSubcriptionsResp{
    repeated UserSubscription user_subscriptions=1;
}

message CompletePaymentReq{
    string callback_token=1;
    string id=2;
    string external_id=3;
    string payment_method=4;
    float paid_amount=5;
    string status=6;
    string paid_at=7;
}

message CompletePaymentResp{
    Payment payment=1;
}

message GetPaymentByIDReq{
    int64 payment_id=1;
}

message GetPaymentByIDResp{
    Payment payment=1;
}

service SubPayment{
    rpc CreateUserSubcription(CreateUserSubcriptionReq) returns (CreateUserSubcriptionResp);
    rpc GetUserSubcriptions(GetUserSubcriptionsReq) returns (GetUserSubcriptionsResp);
    rpc CompletePayment(CompletePaymentReq) returns (CompletePaymentResp);
    rpc GetPaymentByID(GetPaymentByIDReq) returns (GetPaymentByIDResp);
}